--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@astrojs/check": "^0.5.10",
     "astro": "^4.5.16",
     "typescript": "^5.4.4"
+  },
+  "volta": {
+    "node": "20.11.1",
+    "yarn": "4.1.1"
   }
 }
